--- a/views/student/residence.hbs
+++ b/views/student/residence.hbs
@@ -1,3 +1,44 @@
+{{#section 'footer'}}
+<script>
+    $(".date").datepicker();
+</script>
+<script>
+
+    $(document).ready(function () {
+
+        count = 0;
+        $("#residences").on("click", "#save_add", function (e) {
+            var values = {};
+            $.each($('#formAdd').serializeArray(), function (i, field) {
+                values[field.name] = field.value;
+            });
+        })
+        $(document).on('submit', '.frmResidence', function (e) {
+            e.preventDefault()
+            var url = $(this).attr("action");
+            var request_method = $(this).attr("method")
+            frmData = $(this).serialize()
+            $.ajax({
+                type: request_method,
+                url: url,
+                data: frmData,
+                success: function (data) {
+                    Swal.fire(
+                        data.success,
+                        '',
+                        'success'
+                    )
+                        .then(function () {
+                            location.reload(true)
+                        })
+                }
+            });
+        });
+
+    });
+</script>
+
+{{/section}}
 <div class="span12">
     <div class="content">
         <div class="module message">
@@ -7,7 +48,7 @@
             </div>
             <div class="module-body table">
                 <table class="table table-message">
-                    <tbody>
+                    <tbody id="residences">
                         <tr class="heading">
                             <td>
                                 STT
@@ -23,57 +64,70 @@
                             <td>
                                 Ghi chú
                             </td>
-                            <td>Xóa</td>
                             <td>Cập nhật</td>
+                            <td>Xóa</td>
                         </tr>
+                        {{#each list}}
+
                         <tr class="unread">
-                            <td>
-                                1
-                            </td>
-                            <td>
-                                <input type="text" value="07/07/2020" class="span2">
-                            </td>
-                            <td><input type="text" placeholder="Thời gian kết thúc" class="span2"></td>
-                            <td>
-                                <input type="text" value="KTX B, khu phố 6, p. Linh Trung, Thủ Đức" class="span2">
+                            <form class="frmResidence" action="/profile/residence/update/{{@index}}" method="post">
+                                <td>
+                                    {{Add @index 1}}
+                                </td>
+                                <td>
+                                    <input type="text" name="ThoiGianBD" placeholder="Thời gian bắt đầu"
+                                        value="{{DateFormat ThoiGianBD}}" class="span2 date">
+                                </td>
+                                <td><input type="text" name="ThoiGianKT" placeholder="Thời gian kết thúc"
+                                        value="{{DateFormat ThoiGianKT}}" class="span2 date"></td>
+                                <td>
+                                    <input type="text" name="DiaChi" placeholder="Địa chỉ" value="{{DiaChi}}"
+                                        class="span2">
 
-                            </td>
+                                </td>
 
-                            <td>
-                                <input type="text" placeholder="Nhập ghi chú" class="span2">
-                            </td>
-                            <td><button class="btn btn-default"><i class="icon-trash"></i></button></td>
-                            <td><button class="btn btn-default"><i class="icon-save"></i></button></td>
+                                <td>
+                                    <input type="text" name="GhiChu" placeholder="Ghi chú" value="{{GhiChu}}"
+                                        class="span2">
+                                </td>
+                                <td><button class="btn btn-default"><i class="icon-save"></i></button></td>
+                            </form>
+                            <form class="frmResidence" action="/profile/residence/delete/{{@index}}" method="post">
+                                <input type="hidden" value="{{index}}" name="index">
+                                <td><button type="submit" class="btn btn-default"><i class="icon-trash"></i></button>
+                                </td>
+                            </form>
                         </tr>
+                        {{/each}}
                         <tr class="unread">
+                            <form action="/profile/residence" method="post" id="formAdd">
+                                <td>
+                                </td>
+                                <td>
+                                    <input type="text" name="ThoiGianBD" placeholder="Thời gian bắt đầu"
+                                        class="span2 date">
+                                </td>
+                                <td><input type="text" name="ThoiGianKT" placeholder="Thời gian kết thúc"
+                                        class="span2 date"></td>
+                                <td>
+                                    <input type="text" name="DiaChi" placeholder="Địa chỉ" class="span2">
 
-                            <td>
-                                1
-                            </td>
-                            <td>
-                                <input type="text" value="07/07/2020" class="span2">
-                            </td>
-                            <td><input type="text" placeholder="Thời gian kết thúc" class="span2"></td>
-                            <td>
-                                <input type="text" value="KTX B, khu phố 6, p. Linh Trung, Thủ Đức" class="span2">
+                                </td>
 
-                            </td>
-
-                            <td>
-                                <input type="text" placeholder="Nhập ghi chú" class="span2">
-                            </td>
-                            <td><button class="btn btn-default"><i class="icon-trash"></i></button></td>
-                            <td><button class="btn btn-default"><i class="icon-save"></i></button></td>
+                                <td>
+                                    <input type="text" name="GhiChu" placeholder="Ghi chú" class="span2">
+                                </td>
+                                <td><button type="submit" class="btn btn-default" id="save_add"><i
+                                            class="icon-save"></i></button></td>
+                                <td></td>
+                            </form>
                         </tr>
-
-
                     </tbody>
                 </table>
             </div>
             <div class="module-foot">
-                <button class="btn btn-info"><i class="icon-plus">Thêm lưu trú</i></button>
+                <button id="add" class="btn btn-info"><i class="icon-plus">Thêm lưu trú</i></button>
             </div>
         </div>
     </div>
-    <!--/.content-->
 </div>
