--- a/views/student/subject_history.hbs
+++ b/views/student/subject_history.hbs
@@ -14,12 +14,11 @@
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Tất cả</a></li>
-                            <li><a href="#">Học kì 1 (2021-2022)</a></li>
-                            <li><a href="#">Draft(2)</a></li>
-                            <li><a href="#">Trash</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Settings</a></li>
+                            <li><a href="/submit/subject/history">Tất cả</a></li>
+                            {{#each filters}}
+                            <li><a href="/submit/subject/history/?filter={{filter}}">{{filter}}</a></li>
+                            {{/each}}
+                        
                         </ul>
                     </div>
                 </div>
@@ -34,7 +33,7 @@
                             <td class="cell-title">
                                 Tên HP
                             </td>
-                            <td>Số tín chỉ</td>
+                            <td>NH/HK</td>
                             <td>
                                 Trạng thái
                             </td>
@@ -43,88 +42,29 @@
                                 Thời gian
                             </td>
                         </tr>
-                        <tr class="unread">
-                            <td>CTDLGT21</td>
-                            <td>Cấu trúc dữ liệu và giải thuật</td>
-                            <td>4</td>
+                        {{#each list }}
+                        <tr class="{{#ifCond TinhTrang true}}
+                                unread
+                            {{else}}
+                                read
+                            {{/ifCond}}">
+
+                            <td>{{HocPhan.MaHP}}</td>
+                            <td>{{HocPhan.TenHP}}</td>
+                            <td>{{NamHoc HocPhan.NgayBatDau HocPhan.NgayKetThuc HocPhan.HocKi}}/{{HocPhan.HocKi}}</td>
                             <td>
+                                {{#ifCond TinhTrang true}}
                                 Đã đăng ký
-                            </td>
-
-                            <td>8.30 pm 22/06/2021</td>
-                        </tr>
-                        <tr class="unread starred">
-
-                            <td>CTDLGT21</td>
-                            <td>Cấu trúc dữ liệu và giải thuật</td>
-                            <td>4</td>
-                            <td>
-                                Đã đăng ký
-                            </td>
-
-                            <td>8.30 pm 22/06/2021</td>
-                        </tr>
-
-                        <tr class="read">
-                            <td>CTDLGT21</td>
-                            <td>Cấu trúc dữ liệu và giải thuật</td>
-                            <td>4</td>
-                            <td>
+                                {{else}}
                                 Đã hủy
+                                {{/ifCond}}
                             </td>
 
-                            <td>8.30 pm 22/06/2021</td>
+                            <td>{{TimeFormat createdAt}}</td>
                         </tr>
-                        <tr class="read">
-                            <td>CTDLGT21</td>
-                            <td>Cấu trúc dữ liệu và giải thuật</td>
-                            <td>4</td>
-                            <td>
-                                Đã hủy
-                            </td>
+                        {{/each}}
 
-                            <td>8.30 pm 22/06/2021</td>
-                        </tr>
-                        <tr class="read">
-                            <td>CTDLGT21</td>
-                            <td>Cấu trúc dữ liệu và giải thuật</td>
-                            <td>4</td>
-                            <td>
-                                Đã hủy
-                            </td>
 
-                            <td>8.30 pm 22/06/2021</td>
-                        </tr>
-                        <tr class="read">
-                            <td>CTDLGT21</td>
-                            <td>Cấu trúc dữ liệu và giải thuật</td>
-                            <td>4</td>
-                            <td>
-                                Đã hủy
-                            </td>
-
-                            <td>8.30 pm 22/06/2021</td>
-                        </tr>
-                        <tr class="read">
-                            <td>CTDLGT21</td>
-                            <td>Cấu trúc dữ liệu và giải thuật</td>
-                            <td>4</td>
-                            <td>
-                                Đã hủy
-                            </td>
-
-                            <td>8.30 pm 22/06/2021</td>
-                        </tr>
-                        <tr class="read">
-                            <td>CTDLGT21</td>
-                            <td>Cấu trúc dữ liệu và giải thuật</td>
-                            <td>4</td>
-                            <td>
-                                Đã hủy
-                            </td>
-
-                            <td>8.30 pm 22/06/2021</td>
-                        </tr>
                     </tbody>
                 </table>
             </div>
